fix(story): remove extra spacing

--- a/src/scss/story.scss
+++ b/src/scss/story.scss
@@ -53,12 +53,6 @@ $paragraph-padding: 31px;
     .scrollreveal & {
       visibility: hidden;
     }
-
-    p {
-      @media (min-width: $screen-xs-min) {
-        margin-bottom: 42px;
-      }
-    }
   }
 
   .col {
